# piproject

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  \  configbuild.txt  helloworld.cpp  playWaves.cpp  playback.cpp  recorded.raw  recorder.cpp  run.sh  vcpkg.json
